package com.example.exerciselog.utils

object TestTags {
    const val ADD_EXERCISE_LOG = "ADD_EXERCISE_LOG"
    const val EMPTY_LOG_DESCRIPTION = "EMPTY_LOG_DESCRIPTION"

    const val CALORIES_TEXT_FIELD  = "CALORIES_TEXT_FIELD"
    const val SELECTING_DATE = "SELECTING_DATE"
    const val SELECTING_TIME = "SELECTING_TIME"
    const val SELECTING_DURATION = "SELECTING_DURATION"

    const val OK_BUTTON = "OK_BUTTON"
    const val SAVE_EXERCISE_LOG = "SAVE_EXERCISE_LOG"
}